--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,6 @@ dependencies = [
     "yt-dlp>=2025.10.14",
     "blinker==1.7.0",
     "setuptools>=80.9.0",
+    "zstandard>=0.25.0",
+    "tabulate>=0.9.0",
 ]
