--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ dependencies = [
     "setuptools>=80.9.0",
     "zstandard>=0.25.0",
     "tabulate>=0.9.0",
+    "google-generativeai>=0.8.5",
 ]
