feat: Prepare for PyPI packaging
- Refactor project structure to `src/threads_dlp/`.
- Move `main.py`, `modules/` content, and `uploader.py` into `src/threads_dlp/`.
- Update `pyproject.toml` with build system, project metadata, and entry point.
- Fix `import` paths in `main.py`, `scraper.py`, `uploader.py` to use relative imports.
- Adjust `database.py` to create `threads_dlp.db` in the current working directory.
- Integrate `languages.json` into the package using `importlib.resources`.
- Update project version to 1.0.3 and project name to `threads-dlp-layorx` for TestPyPI.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,21 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
-name = "theads2yt"
-version = "0.1.0"
-description = "Add your description here"
+name = "threads-dlp-layorx"
+version = "1.0.3"
+authors = [
+  { name="LayorX", email="your@email.com" },
+]
+description = "A tool to download videos from Threads user pages."
 readme = "README.md"
 requires-python = ">=3.10"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
 dependencies = [
     "requests>=2.32.5",
     "selenium>=4.37.0",
@@ -21,3 +33,9 @@ dependencies = [
     "datasette-auth-passwords>=1.1.1",
     "honcho>=2.0.0",
 ]
+
+[project.scripts]
+threads-dlp = "threads_dlp.main:main"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/threads_dlp"]
